GuessNumber-响应式布局

--- a/guess-number/style.css
+++ b/guess-number/style.css
@@ -39,6 +39,10 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-around;
+
+  @media (max-width: 37.5em) {
+    height: 45vh;
+  }
 }
 
 .left {
